# libIAM

./: CMakeLists.txt  LICENSE  README.md
cmake/: IAMConfig.cmake.in
examples/: CMakeLists.txt
examples/plugin_viewer/: CMakeLists.txt  README.md  viewer.c
examples/python_c_api/: CMakeLists.txt  README.md  iam_py.c
include/iam/: algorithm.h  iam.h  info.h  init.h  logger.h  parameter.h  plugin.h  setting.h  variable.h
plugins/: CMakeLists.txt
plugins/binary_encoding/NSA_RS/: CMakeLists.txt  Readme.md  nsa_rs.c
plugins/real_encoding/NSA_RA/: CMakeLists.txt  Readme.md  nsa_ra.c
plugins/real_encoding/NSA_RV/: CMakeLists.txt  Readme.md  nsa_rv.c
plugins/storage/log_txt/: CMakeLists.txt  Readme.md  log_txt.c
plugins/storage/setting_json/: CMakeLists.txt  Readme.md  setting_json.c
scripts/linux/: build_and_test.sh  init.sh  install.sh
scripts/win/: build_and_test.bat  init.bat  install.bat
src/: algorithm_manager.c  algorithm_manager.h  common.h  iam.c  info.c  init.c  list.c  list.h  logger.c  logger_manager.c  logger_manager.h  memory.h  parameter.c  plugin_manager.c  plugin_manager.h  setting.c  setting_manager.c  setting_manager.h  variable.c  version.h
src/os/: os.h  unix.c  unix.h  win.c  win.h
tests/: CMakeLists.txt  test_list.c  test_logger.c  test_plugin.c  test_setting.c
tests/mock/: list.c  list.h  memory.c  memory.h  mock.c
tests/mock/iam/: logger.c  logger.h
tests/mock/os/: os.c  os.h
